REVERT: on everything

--- a/.github/workflows/release-pull-request.yaml
+++ b/.github/workflows/release-pull-request.yaml
@@ -1,7 +1,7 @@
 name: Release pull request
 on:
   pull_request:
-    types: [opened, synchronize]
+    #types: [opened]
 jobs:
   check-if-should-run:
     name: Check if should run
