--- a/.github/workflows/release-pull-request.yaml
+++ b/.github/workflows/release-pull-request.yaml
@@ -34,6 +34,9 @@ jobs:
     steps: 
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Fetch base ref
+        run: |
+          git fetch origin "${{ github.base_ref }}"
       - name: Fail if PR is not empty
         run: |
           git diff --exit-code "${{ github.base_ref }}" "${{ github.head_ref }}"
