--- a/.github/workflows/release-pull-request.yaml
+++ b/.github/workflows/release-pull-request.yaml
@@ -39,7 +39,7 @@ jobs:
           git fetch origin "${{ github.base_ref }}"
       - name: Fail if PR is not empty
         run: |
-          git diff --exit-code "origin/${{ github.base_ref }}" "${{ github.head_ref }}"
+          git diff --exit-code "origin/${{ github.base_ref }}" HEAD
       - name: Update changelog
         run: |
           version="${{ needs.gather_facts.outputs.version }}"
