--- a/.github/workflows/release-pull-request.yaml
+++ b/.github/workflows/release-pull-request.yaml
@@ -13,6 +13,7 @@ jobs:
         name: Get version
         run: |
           title="${{ github.event.pull_request.title }}"
+          echo "grep version: $(grep --version)"
           if echo $title | grep -qE '^release v\d+\.\d+\.\d+([.-][^.-].*)?$' ; then
             version=$(echo $title | cut -d ' ' -f 2)
           fi
