--- a/.github/workflows/release-pull-request.yaml
+++ b/.github/workflows/release-pull-request.yaml
@@ -15,7 +15,10 @@ jobs:
           title="${{ github.event.pull_request.title }}"
           echo "grep version: $(grep --version)"
           if echo $title | grep -qE '^release v\d+\.\d+\.\d+([.-][^.-].*)?$' ; then
+            echo "DEBUG: in if"
             version=$(echo $title | cut -d ' ' -f 2)
+          else
+            echo "DEBUG: outside if"
           fi
           echo "version=\"$version\""
           echo "::set-output name=version::${version}"
