--- a/.github/workflows/zz_generated.create_release.yaml
+++ b/.github/workflows/zz_generated.create_release.yaml
@@ -182,7 +182,7 @@ jobs:
       - create_release
     steps:
       - uses: actions/checkout@v2
-      - uses: giantswarm/floating-tags-action@v1
+      - uses: giantswarm/floating-tags-action@annotated-tags
 
   create-release-branch:
     name: Create release branch
