--- a/.github/workflows/zz_generated.ensure_major_version_tags.yaml
+++ b/.github/workflows/zz_generated.ensure_major_version_tags.yaml
@@ -21,4 +21,4 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - uses: giantswarm/floating-tags-action@v1
+      - uses: giantswarm/floating-tags-action@annotated-tags
